--- a/css/main.css
+++ b/css/main.css
@@ -251,7 +251,7 @@ h6,
 .h04,
 .h05,
 .h06 {
-    font-family: "Poppins", sans-serif;
+   
     color: #151515;
     font-style: normal;
     text-rendering: optimizeLegibility;
@@ -3178,6 +3178,7 @@ ul.lead.toolList li:before {
     font-size: 2.4rem;
     line-height: 1;
     margin-bottom: 10px;
+    font-weight: 400;
 }
 
 #credentials .timeline-header span {
